--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
           mkdir -p ./publish
           cp -fv go-github-repos.alfredworkflow ./publish
           make clean
+          ls -al $GOPATH/src/$REPO_URL/publish
 
       - name: Release file
         uses: yuanmomo/action-release@master
